Basic implementation completed

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,11 @@
   </head>
 
   <body>
+    <nav>
+      <p>
+        <%= link_to 'Friend requests', received_friend_requests_path %>
+      </p>
+    </nav>
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
 
